更新开发计划

--- a/docs/网络自动化核心开发计划.md
+++ b/docs/网络自动化核心开发计划.md
@@ -9,11 +9,13 @@
 ```
 阶段1: 核心基础模块（配置模板系统）
     ↓
-阶段2: 凭据管理与安全模块
+阶段1.5: 基础连接验证（新增）
     ↓
-阶段3: 设备连接与基础自动化
+阶段2: 凭据管理与安全模块（优化）
     ↓
-阶段4: 配置管理与回滚系统
+阶段3: 设备连接与基础自动化（优化）
+    ↓
+阶段4: 配置管理与回滚系统（优化）
     ↓
 阶段5: 实时监控与CLI交互
     ↓
@@ -26,7 +28,7 @@
 
 ### ✅ 为什么先做配置模板？
 - **核心依赖**：所有自动化操作都依赖配置模板
-- **数据基础**：为后续功能提供模板数据支撑
+- **数据基础**：为后续功能提供模板数据支撑（基础数据如品牌、设备型号、区域等等已完成）
 - **功能验证**：可以独立测试模板渲染和管理功能
 
 ### 📝 具体开发任务
@@ -99,7 +101,7 @@ app/core/credential_manager.py
 - Fernet对称加密实现
 - 密码加密/解密函数
 - 密钥管理和轮换
-- 安全缓存机制
+- **OTP密码策略**：使用后立即清除，不做缓存
 
 #### 2.2 凭据管理器（2天）
 ```bash
@@ -108,7 +110,7 @@ app/services/credential_service.py
 
 **核心功能**：
 - 动态凭据解析逻辑
-- OTP密码支持
+- **OTP密码处理**：一次性使用，内存中不缓存
 - Enable密码处理
 - 凭据优先级决策
 
@@ -142,17 +144,41 @@ app/network_automation/scrapli_driver.py
 - 超时控制
 - 品牌驱动适配（华三、华为、思科）
 
-#### 3.2 基础并发控制（1天）
+#### 3.2 动态并发控制（1天）
 ```bash
 app/network_automation/concurrency_controller.py
+app/core/device_concurrency_config.py
 ```
 
 **核心功能**：
+- **基于设备类型的动态并发控制**：
+  ```python
+  concurrency_config = {
+      "core_switch": {"max_connections": 1, "timeout": 60},
+      "access_switch": {"max_connections": 3, "timeout": 30},
+      "router": {"max_connections": 2, "timeout": 45}
+  }
+  ```
 - 信号量并发控制
 - 连接限制管理
 - 超时处理
 
-#### 3.3 设备自动化API（2天）
+#### 3.3 网络错误分类处理（1天）
+```bash
+app/core/network_error_handler.py
+app/exceptions/network_exceptions.py
+```
+
+**核心功能**：
+- **网络设备错误分类处理策略**：
+  - 连接错误：超时、拒绝连接、网络不可达
+  - 认证错误：用户名/密码错误、权限不足
+  - 命令错误：语法错误、设备拒绝、资源不足
+  - 会话错误：会话超时、连接中断
+- 自动重试机制
+- 错误日志记录
+
+#### 3.4 设备自动化API（2天）
 ```bash
 app/api/v1/endpoints/device_automation.py
 ```
@@ -204,6 +230,30 @@ app/services/rollback_service.py
 - `GET /rollback-operations/` - 查询回滚历史
 - `POST /rollback-operations/{id}/execute` - 执行回滚
 - `GET /rollback-operations/{id}/status` - 查询回滚状态
+
+#### 4.4 事务边界设计（半天）
+```bash
+app/core/transaction_manager.py
+```
+
+**核心功能**：
+- **配置变更多表操作事务边界**：
+  ```python
+  # 事务边界示例
+  async with transaction_manager.begin():
+      # 1. 创建配置快照
+      snapshot = await create_config_snapshot(device_id)
+      # 2. 记录操作日志
+      operation_log = await create_operation_log(device_id, action)
+      # 3. 执行配置变更
+      result = await execute_configuration(device_id, commands)
+      # 4. 创建变更后快照
+      post_snapshot = await create_post_change_snapshot(device_id)
+      # 5. 生成差异记录
+      diff_record = await create_config_diff(snapshot.id, post_snapshot.id)
+  ```
+- 自动回滚机制
+- 数据一致性保证
 
 ---
 
@@ -284,15 +334,16 @@ app/services/output_parser_service.py
 
 ## 📅 开发时间规划
 
-| 阶段     | 预计时间    | 主要交付物                     |
-| -------- | ----------- | ------------------------------ |
-| 阶段1    | 4-5天       | 配置模板完整API + 基础模板数据 |
-| 阶段2    | 4天         | 凭据管理 + 设备连接状态API     |
-| 阶段3    | 5-6天       | 设备连接 + 基础自动化功能      |
-| 阶段4    | 5天         | 配置管理 + 回滚系统            |
-| 阶段5    | 6天         | SNMP监控 + WebSocket CLI       |
-| 阶段6    | 4-6天       | Nornir集成 + 性能优化          |
-| **总计** | **28-32天** | **完整网络自动化系统**         |
+| 阶段     | 预计时间        | 主要交付物                     |
+| -------- | --------------- | ------------------------------ |
+| 阶段1    | 4-5天           | 配置模板完整API + 基础模板数据 |
+| 阶段1.5  | 1天             | 基础连接验证 + 模板渲染预览    |
+| 阶段2    | 4天             | 凭据管理 + 设备连接状态API     |
+| 阶段3    | 6-7天           | 设备连接 + 基础自动化功能      |
+| 阶段4    | 5.5天           | 配置管理 + 回滚系统 + 事务管理 |
+| 阶段5    | 6天             | SNMP监控 + WebSocket CLI       |
+| 阶段6    | 4-6天           | Nornir集成 + 性能优化          |
+| **总计** | **30.5-33.5天** | **完整网络自动化系统**         |
 
 ---
 
@@ -320,6 +371,20 @@ pip install cryptography  # Fernet加密
 pip install pysnmp easysnmp  # SNMP支持
 ```
 
+### 🛡️ 技术优化要点
+1. **OTP密码安全策略**：使用后立即清除，内存中不做缓存
+2. **动态并发控制**：基于设备类型配置不同的并发策略
+3. **错误分类处理**：建立完善的网络设备错误分类和处理机制
+4. **事务边界管理**：确保配置变更的数据一致性和原子性
+5. **连接验证机制**：早期发现连接问题，降低开发风险
+
+### 🔧 安全和性能考虑
+- **密码管理**：OTP密码一次性使用，Enable密码独立处理
+- **并发优化**：根据设备类型动态调整连接策略
+- **错误恢复**：自动重试和智能错误处理
+- **数据完整性**：多表操作事务保护
+- **监控扩展**：为未来告警系统预留接口
+
 ---
 
 ## ✅ 总结
@@ -329,8 +394,49 @@ pip install pysnmp easysnmp  # SNMP支持
 - 实现基础的CRUD操作
 - 添加Jinja2模板渲染功能
 
-这个开发顺序确保了：
-1. **依赖关系合理**：后续功能依赖前面的基础模块
-2. **风险控制**：核心功能优先，降低项目风险
-3. **测试友好**：每个阶段都可以独立测试验证
-4. **渐进式开发**：功能逐步完善，便于调试和优化
+这个优化后的开发顺序确保了：
+1. **依赖关系优化**：基础数据已完成，后续功能依赖前面的基础模块
+2. **早期验证**：阶段1.5提供连接验证，降低风险
+3. **安全强化**：OTP密码策略优化，不做内存缓存
+4. **并发优化**：基于设备类型的动态并发控制
+5. **错误处理**：完善的网络设备错误分类处理
+6. **数据一致性**：多表操作事务边界保护
+7. **测试友好**：每个阶段都可以独立测试验证
+8. **渐进式开发**：功能逐步完善，便于调试和优化
+9. **扩展预留**：为未来告警系统等功能预留接口
+
+---
+
+## 🎯 第一点五阶段：基础连接验证（优先级：🔥🔥🔥）
+
+### ✅ 为什么需要基础连接验证？
+- **模板验证**：验证配置模板的实际可用性
+- **连接测试**：早期发现连接问题，降低后续开发风险
+- **渲染预览**：提供模板渲染结果的实时预览功能
+
+### 📝 具体开发任务
+
+#### 1.5.1 简单设备连接测试（半天）
+```bash
+app/utils/simple_connector.py
+```
+
+**核心功能**：
+- 基础SSH/Telnet连接测试
+- 连接状态验证
+- 简单的品牌识别
+
+#### 1.5.2 模板渲染预览（半天）
+```bash
+app/api/v1/endpoints/template_preview.py
+```
+
+**API 功能列表**：
+- `POST /template-preview/render` - 模板渲染预览
+- `POST /template-preview/validate` - 模板语法验证
+- `POST /template-preview/test-connection` - 测试设备连接
+
+**核心功能**：
+- Jinja2语法验证
+- 变量参数验证
+- 渲染结果预览（不执行）
