--- a/docs/网络设备自动化平台设计方案.md
+++ b/docs/网络设备自动化平台设计方案.md
@@ -166,7 +166,7 @@
    - `default_cli_username` (str): 该区域内使用动态密码的设备的默认CLI账号名。
 3. **品牌表 (Brand)**
    - `name` (str, unique): 品牌的唯一名称，例如 "H3C", "Huawei"。
-   - `platform_type` (str, unique): 对应 Nornir/Scrapli 的 `platform` 驱动类型，例如 `h3c_comware`, `huawei_vrp`。
+   - `platform_type` (str, unique): 对应 Nornir/Scrapli 的 `platform` 驱动类型，例如 `hp_comware`, `huawei_vrp`。
 4. **设备型号表 (DeviceModel)**
    - `name` (str, unique): 设备型号的唯一名称，例如 "S5700", "CE12800"。
    - `brand_id` (FK to Brand): 关联到品牌表，表明该型号属于哪个品牌。
